# game-asset-packer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  configure.ac  game_asset_packer.code-workspace
cmake/: FindGLEW.cmake
data/: alphafont.gap  luatest.gap  space.gap  system.gap  test.gap  tilemap_test.gap
data/testfiles/: hello.py  main.lua  main.luac
data/testfiles/audio/: test_22050_pcm16_le.raw
data/testfiles/palette/: links.txt  zenith.gpl  zenith.hex  zenith.pal  zenith.txt
data/testfiles/tmx/: tilemap.tmx  tileset1.tsx
doc/: binary_file_format.md  binary_file_format.txt  gap_file_format.md  gap_file_format.txt  todo.md
doc/external_file_formats/: wav.md
doc/external_file_formats/tiled-tmx/: tmx.md
m4/: ax_cxx_compile_stdcxx_0x.m4  ax_cxx_compile_stdcxx_14.m4
src/: Makefile.am  app.cpp  app.h  asset_sound.cpp  asset_sound.h  assets.cpp  assets.h  build.cpp  build.h  config.h.in  configuration.cpp  configuration.h  encode_definitions.cpp  encode_definitions.h  encode_gbin.cpp  encode_gbin.h  errors.cpp  errors.h  export.cpp  export.h  filesystem.h  image.cpp  image.h  main.cpp  parse_colour_map.cpp  parse_colour_map.h  parse_gap.cpp  parse_gap.h  sound_sample.cpp  sound_sample.h  source_tilemap.cpp  source_tilemap.h  tilemap.cpp  tilemap.h  tileset.h
src/tests/: CMakeLists.txt  test_tilemap.cpp  test_tilemap.h  tests.cpp  tests.h
src/utility/: ansi.h  format.h  hash.h  hexdump.h  loadfile.h  maths.h  program_options.h  tilemap.h  tokenize.h  unicode.h
